fix(colorized): dialog-warning wrong color

--- a/styles/colorized/style.css
+++ b/styles/colorized/style.css
@@ -252,7 +252,7 @@ textview .time {
 }
 
 .dialog-warning {
-    border-bottom-color: @olarized-yellow;
+    border-bottom-color: @solarized-yellow;
 }
 
 .dialog-info {
